refactor: change mobile_number to phone_numbers array
